# ynab-splitwise

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  pytest.ini
src/hello_world/: __init__.py
src/ynab_splitwise/: __init__.py
src/ynab_splitwise/auth/: __init__.py  config.py
src/ynab_splitwise/cli/: interface.py
src/ynab_splitwise/clients/: __init__.py  splitwise.py  ynab_client.py
src/ynab_splitwise/processors/: __init__.py  duplicate_detector.py  transaction_processor.py
src/ynab_splitwise/utils/: exceptions.py  logger.py
tests/: __init__.py
tests/fixtures/: sample_data.py
tests/test_auth/: __init__.py  test_config.py
tests/test_cli/: __init__.py
tests/test_clients/: __init__.py
tests/test_processors/: __init__.py  test_duplicate_detector.py  test_transaction_processor.py
